WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221669
[LFC][Integration] Paint invalidation for inline element style changes
https://bugs.webkit.org/show_bug.cgi?id=221669
Summary
[LFC][Integration] Paint invalidation for inline element style changes
Antti Koivisto
Reported
2021-02-10 03:43:35 PST
It is needed
Attachments
patch
(6.98 KB, patch)
2021-02-10 03:52 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
patch
(6.94 KB, patch)
2021-02-10 03:54 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-02-10 03:52:39 PST
Created
attachment 419836
[details]
patch
Antti Koivisto
Comment 2
2021-02-10 03:54:45 PST
Created
attachment 419837
[details]
patch
EWS
Comment 3
2021-02-10 10:26:49 PST
Committed
r272662
: <
https://commits.webkit.org/r272662
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419837
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-02-10 14:27:07 PST
<
rdar://problem/74206346
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug