[LFC][Integration] Paint invalidation for inline element style changes https://bugs.webkit.org/show_bug.cgi?id=221669

Reviewed by Zalan Bujtas.

Source/WebCore:

Test: fast/repaint/inline-style-change.html

Compute the repaint rect for RenderInline.

* layout/integration/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::visualOverflowBoundingBoxRectFor const):
* layout/integration/LayoutIntegrationLineLayout.h:
* rendering/RenderInline.cpp:
(WebCore::RenderInline::linesVisualOverflowBoundingBox const):
(WebCore::RenderInline::clippedOverflowRectForRepaint const):

LayoutTests:

* fast/repaint/inline-style-change-expected.txt: Added.
* fast/repaint/inline-style-change.html: Added.


Canonical link: https://commits.webkit.org/233921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272662 268f45cc-cd09-0410-ab3c-d52691b4dbfc